--- a/Messing Around.html
+++ b/Messing Around.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+   <html>
          <head>
                  <title> messing around </title>
           </head>
           <body>
                    <h1> <b><i>Welcome to Haxius Networks</I></b> </h1>
                   <p> This is a small company started in 2017 </p>
+</html>
